# github-sts

./: .dockerignore  .gitignore  .ruffignore  CHANGELOG.md  Dockerfile  Makefile  README.md  go.mod  go.sum  pyproject.toml  release-please-config.json
.github/: dependabot.yml  labeler.yml
.github/sts/depthmark-release-bot/: release.sts.yaml
.github/workflows/: ci.yml  release-please.yml  release.yml
client/: revoke.go  revoke_test.go  token.go  token_test.go
cmd/benchviz/: main.go
cmd/github-sts/: main.go
config/: github-sts.example.yaml
dashboards/grafana/: fleet-overview.json  governance-security.json  logs-traces.json
docs/: load-testing.md
e2e/: bench_test.go  load_test.go
internal/audit/: audit.go  audit_test.go
internal/config/: config.go  config_test.go
internal/github/: app.go  app_test.go  ratelimit.go  ratelimit_test.go  reachability.go  reachability_test.go
internal/handler/: exchange.go  exchange_test.go  health.go  health_test.go
internal/jti/: jti.go  jti_test.go
internal/metrics/: metrics.go
internal/oidc/: oidc.go  oidc_test.go
internal/policy/: loader.go  loader_test.go  policy.go  policy_test.go
internal/ratelimit/: ratelimit.go  ratelimit_test.go
internal/server/: server.go  server_test.go
src/github_sts/: __init__.py  audit.py  config.py  github_app.py  jti_cache.py  logging_config.py  main.py  metrics.py  oidc.py  policy.py  policy_loader.py  rate_limit.py  request_context.py
src/github_sts/routes/: __init__.py  exchange.py  health.py
tests/: __init__.py  test_audit.py  test_health.py  test_jti_cache.py  test_logging_config.py  test_multi_app.py  test_policy.py  test_rate_limit.py
